--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Original Trombone</title>
+	<link rel="stylesheet" href="./style.css">
+	<title>Original Trombone</title>
 </head>
 <body>
 	<header>
-	
+		<img src="./img/original_trombones.png" alt="Original Trombones">
 		<nav id="nav-bar">
 			<ul>
 				<li>
@@ -21,8 +22,7 @@
 					<a class="nav-link" href="#pricing">Pricing</a> 
 				</li>
 			</ul>
-		</nav>
-		
+		</nav>	
 	</header>
 
 	
@@ -39,20 +39,20 @@
 		<section id="features">
 			<div class="rows-1">
 				<h2>Premium Materials</h2>
-				<p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
-            </div>
-	
+				<p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+			 </div>
 			
-				<div class="rows-2">
-					<h2>Fast Shipping</h2>
-					<p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
-				</div>
+			<div class="rows-2">
+				<h2>Fast Shipping</h2>
+				<p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+			</div>
+		
 			
-				
-				<div class="rows-3">
-					<h2>Quality Assurance</h2>
-					<p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
-				</div>
+			<div class="rows-3">
+				<h2>Quality Assurance</h2>
+				<p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+			</div>
+
 			</section>
 
 		
